--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -547,7 +547,7 @@ a:hover {
   About us section
 ==================================================================*/
 .about .block {
-  background: #242930;
+  background:#5c144c;
   padding: 30px;
   border-bottom: 2px solid transparent;
   transition: .5s all;
