--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -975,7 +975,7 @@ a:hover {
 
 .service-2 .service-item:hover i {
   background: #fff;
-  color: #ff3700;
+  color: #3f104a;
 }
 
 .service-2 .service-item i {
