--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,11 +163,11 @@ a:hover {
 }
 
 .bg-one {
-  background-color: #ff0048;
+  background-color:#afbac4;
 }
 
 .bg-dark {
-  background: #ff0048;
+  background:#afbac4;
 }
 
 .parallax-section {
