--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -981,7 +981,7 @@ a:hover {
 .service-2 .service-item i {
   font-size: 30px;
   display: inline-block;
-  background: #57cbcc none repeat scroll 0 0;
+  background:#292F36 none repeat scroll 0 0;
   border-radius: 30px;
   box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
   color: #fff;
@@ -1220,7 +1220,7 @@ a:hover {
 }
 
 .post-block {
-  background-color: #ffffff;
+  background-color: #3f104a;
   margin-bottom: 10px;
 }
 
