--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@ a:hover {
   Navigation
 ==================================================================*/
 .navigation {
-  background-color:#252B31;
+  background-color:#292F36;
   width: 100%;
   margin-bottom: 0;
 }
