--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,7 +607,7 @@ a:hover {
 }
 
 .about .block .icon-box h3 {
-  color: #afbac4;
+  color:#292F36;
 }
 
 /*=================================================================
