--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@ a:hover {
   Navigation
 ==================================================================*/
 .navigation {
-  background-color:#e5989b;
+  background-color:#6d6875;
   width: 100%;
   margin-bottom: 0;
 }
@@ -547,7 +547,7 @@ a:hover {
   About us section
 ==================================================================*/
 .about .block {
-  background:#e5989b;
+  background:#6d6875;
   padding: 30px;
   border-bottom: 2px solid transparent;
   transition: .5s all;
