--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@ a:hover {
   Navigation
 ==================================================================*/
 .navigation {
-  background-color:#6d6875;
+  background-color:#fdffb6;
   width: 100%;
   margin-bottom: 0;
 }
