--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,7 +416,7 @@ a:hover {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
-  color: #5C144C;
+  color: #1A171A;
 }
 
 .navbar-toggler:focus {
