--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -19,9 +19,7 @@
 			</div>
 		</div>
 	</div>
-	<iframe width="420" height="315"
-	src="https://www.youtube.com/watch?v=PPd79xX_Fx4">
-	</iframe>
+	{{< youtube PPd79xX_Fx4 >}}
 </section>
 {{"<!-- Start Services Section -->" | safeHTML}}
 {{ end }}
