--- a/layouts/_default/_markup/render-link.html
+++ b/layouts/_default/_markup/render-link.html
@@ -1,15 +1,1 @@
-{{ $link := .Destination }}
-{{ $isRemote := (or (strings.HasPrefix $link "http") (in (lower $link) ".pdf")) }}
-{{- if not $isRemote -}}
-  {{ $url := urls.Parse .Destination }}
-  {{- if $url.Path -}}
-    {{ $fragment := "" }}
-    {{- with $url.Fragment }}
-      {{ $fragment = printf "#%s" . }}
-    {{ end -}}
-    {{- with .Page.GetPage $url.Path }}
-      {{ $link = printf "%s%s" .RelPermalink $fragment }}
-    {{ end }}
-  {{ end -}}
-{{- end -}}
-<a href="{{ $link | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}{{ if $isRemote }} target="_blank" rel="noopener"{{ end }}>{{ .Text | safeHTML }}</a>
+<a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}{{ if strings.HasPrefix .Destination "http" }} target="_blank"{{ end }}>{{ .Text }}</a>
