--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,12 +48,12 @@ pre {
 ::-moz-selection {
   /* Code for Firefox */
   color: #fff;
-  background: #57cbcc;
+  background: #ff6f00;
 }
 
 ::selection {
   color: #fff;
-  background: #57cbcc;
+  background: #ff6f00;
 }
 
 hr {
@@ -115,7 +115,7 @@ a:hover {
 
 .btn-transparent:hover,
 .btn-transparent:focus {
-  background-color: #57cbcc;
+  background-color: #ff6f00;
   border: 1px solid transparent;
   color: #fff;
 }
@@ -137,7 +137,7 @@ a:hover {
   position: absolute;
   top: -4px;
   width: 50px;
-  background-color: #57cbcc;
+  background-color: #ff6f00;
 }
 
 .color {
@@ -215,11 +215,11 @@ a:hover {
 
 a:focus,
 a:hover {
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .btn-main {
-  background: #57cbcc;
+  background: #ff6f00;
   color: #fff;
   display: inline-block;
   font-size: 14px;
@@ -307,7 +307,7 @@ a:hover {
 }
 
 .title h2 span {
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .title p {
@@ -352,7 +352,7 @@ a:hover {
 }
 
 .header-bradcrumb a:hover {
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .slick-slide {
@@ -416,7 +416,7 @@ a:hover {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .navbar-toggler:focus {
@@ -460,7 +460,7 @@ a:hover {
 
 .hero-area .block .video-button {
   background: #fff;
-  color: #57cbcc;
+  color: #ff6f00;
   display: inline-block;
   height: 60px;
   width: 60px;
@@ -555,7 +555,7 @@ a:hover {
 }
 
 .about .block:hover {
-  border-bottom: 2px solid #57cbcc;
+  border-bottom: 2px solid #ff6f00;
 }
 
 .about .block:hover .icon-box {
@@ -627,7 +627,7 @@ a:hover {
 
 .about-2 .content-block .media i {
   font-size: 30px;
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .about-2 .content-block .media h4 {
@@ -707,12 +707,12 @@ a:hover {
 
 .form-meghna input:hover,
 .form-meghna textarea:hover {
-  border-color: #57cbcc;
+  border-color: #ff6f00;
 }
 
 #contact-submit {
   border: 1px solid rgba(236, 239, 241, 0.07);
-  background: #57cbcc;
+  background: #ff6f00;
   padding: 12px 0;
   width: 100%;
   margin: 0;
@@ -809,7 +809,7 @@ a:hover {
 }
 
 .price-title h3 {
-  color: #57cbcc;
+  color: #ff6f00;
   margin: 0 0 10px;
   text-transform: uppercase;
 }
@@ -820,7 +820,7 @@ a:hover {
 }
 
 .price-title .value {
-  color: #57cbcc;
+  color: #ff6f00;
   font-size: 30px;
 }
 
@@ -870,7 +870,7 @@ a:hover {
 }
 
 .portfolio-filter .btn.active {
-  border-color: #57cbcc;
+  border-color: #ff6f00;
 }
 
 .portfolio-block {
@@ -929,7 +929,7 @@ a:hover {
 }
 
 .portfolio-block .caption .search-icon {
-  background: #57cbcc;
+  background: #ff6f00;
   width: 50px;
   height: 50px;
   color: #fff;
@@ -975,13 +975,13 @@ a:hover {
 
 .service-2 .service-item:hover i {
   background: #fff;
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .service-2 .service-item i {
   font-size: 30px;
   display: inline-block;
-  background: #57cbcc none repeat scroll 0 0;
+  background: #ff6f00 none repeat scroll 0 0;
   border-radius: 30px;
   box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
   color: #fff;
@@ -1015,7 +1015,7 @@ a:hover {
 }
 
 .skill-bar .progress .progress-bar {
-  background: #57cbcc;
+  background: #ff6f00;
 }
 
 /*=================================================================
@@ -1094,7 +1094,7 @@ a:hover {
 
 .member-photo .mask ul li a:hover {
   background-color: #fff;
-  color: #57cbcc;
+  color: #ff6f00;
   border: 1px solid transparent;
 }
 
@@ -1175,7 +1175,7 @@ a:hover {
 
 .owl-controls .owl-page.active span,
 .owl-controls .owl-page:hover span {
-  background-color: #57cbcc;
+  background-color: #ff6f00;
   border: 2px solid transparent;
 }
 
@@ -1269,7 +1269,7 @@ a:hover {
 }
 
 .post-meta a {
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .post-meta>span {
@@ -1330,7 +1330,7 @@ a:hover {
 }
 
 .next-prev a:hover {
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .next-prev .prev-post i {
@@ -1353,7 +1353,7 @@ a:hover {
 }
 
 .social-profile ul li a i:hover {
-  color: #57cbcc;
+  color: #ff6f00;
 }
 
 .comments-section {
@@ -1401,7 +1401,7 @@ a:hover {
 }
 
 .comment-wrap .media .media-heading a {
-  color: #57cbcc;
+  color: #ff6f00;
   font-size: 13px;
 }
 
@@ -1428,7 +1428,7 @@ a:hover {
 .comment-reply-form input:focus,
 .comment-reply-form textarea:focus {
   box-shadow: none;
-  border: 1px solid #57cbcc;
+  border: 1px solid #ff6f00;
 }
 
 .comment-reply-form textarea,
@@ -1530,7 +1530,7 @@ input#e-mail,
 }
 
 .social-icon ul li a:hover {
-  background: #57cbcc;
+  background: #ff6f00;
 }
 
 .social-icon ul li a:hover i {
@@ -1573,8 +1573,8 @@ input#e-mail,
 }
 
 #scrollUp:hover {
-  background-color: #57cbcc;
-  border: 1px solid #57cbcc;
+  background-color: #ff6f00;
+  border: 1px solid #ff6f00;
 }
 
 /*=================================================================
@@ -2000,7 +2000,7 @@ blockquote {
 }
 
 .form-control-meghna .form-control:focus {
-  border-color: #57cbcc;
+  border-color: #ff6f00;
   box-shadow: 0 0 0 0.2rem rgba(0, 174, 255, 0.432);
 }
 
@@ -2254,8 +2254,8 @@ figcaption {
 }
 
 .pagination .page-item .page-link:hover {
-  background: #57cbcc;
-  border-color: #57cbcc;
+  background: #ff6f00;
+  border-color: #ff6f00;
   color: #fff
 }
 
@@ -2265,9 +2265,9 @@ figcaption {
 }
 
 .pagination .page-item.active .page-link {
-  background: #57cbcc;
+  background: #ff6f00;
   color: #fff;
-  border-color: #57cbcc;
+  border-color: #ff6f00;
 }
 
 #select-language {
