--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1061,7 +1061,7 @@ a:hover {
 }
 
 .member-photo .mask {
-  background-color: #ff6f00
+  background-color: rgba(255,111,0);
   position: absolute;
   text-align: center;
   height: 100%;
