--- a/layouts/_default/_markup/render-link.html
+++ b/layouts/_default/_markup/render-link.html
@@ -1,34 +1,1 @@
-<a
-
-	{{ if or (strings.HasPrefix .Destination `http`) (strings.HasPrefix .Destination `#`) (strings.HasPrefix .Destination `/`) }}
-	
-		href = "{{ .Destination | safeURL }}"
-
-		{{ else if strings.HasPrefix .Destination `mailto` }}
-
-			href = "mailto:{{ .Text }}"
-
-	{{ end }}
-
-	{{ with .Title}}
-		
-		title = "{{ . }}"
-	
-	{{ end }}
-
-	{{ if strings.HasPrefix .Destination "http" }}
-
-		target = "_blank"
-		rel = "nofollow noopener noreferrer"
-
-		{{ else if strings.HasPrefix .Destination "mailto" }}
-
-			onClick = "javascript:window.open('mailto:{{ .Text }}', 'mail'); event.preventDefault()"
-
-	{{ end }}>
-	
-	<span>
-		{{ .Text }}
-	</span>
-
-</a>
+<a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}{{ if strings.HasPrefix .Destination "http" }} target="_blank" rel="noopener"{{ end }}>{{ .Text | safeHTML }}</a>
