--- a/themes/meghna-hugo/layouts/partials/skill.html
+++ b/themes/meghna-hugo/layouts/partials/skill.html
@@ -17,29 +17,25 @@
 			{{"<!-- /section title -->" | safeHTML }}
 		</div>
 		<div class="row">
-			<div class="col-lg-6">
+			<div class="col-lg-12 text-center">
 				<h2>{{ .subtitle | markdownify }}</h2>
 				<p> {{ .content | markdownify }}</p>
 				{{ with .image }}
 				<img class="img-fluid lozad" data-src="{{ . | absURL }}" alt="image">
 				{{ end }}
-			</div>
-			<div class="col-lg-6">
-				<ul class="skill-bar">
-					{{ $.Scratch.Set "counter" 0 }}
-					{{ range $index, $element:= .skill_item }}
-					{{ $.Scratch.Set "counter" (add ($.Scratch.Get "counter") 1) }}
-					<li>
-						<p><span>{{if lt $index 9}}0{{end}}{{$.Scratch.Get `counter`}}- </span>{{ .name }}</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-								style="width:{{ .percent }}">
-							</div>
-						</div>
-					</li>
-					{{ end }}
-				</ul>
-			</div>
+			</div>			
+		</div>
+		<div class="row justify-content-center">
+			{{ range .skill_item }}
+				<div class="col-lg-3 col-md-4 col-6 mb-4">
+					<div class="skill-card text-center">
+						<!-- Skill Item Image -->
+						<img src="{{ .image | absURL }}" alt="{{ .title }}" class="img-fluid mb-3">
+						<!-- Skill Item Title -->
+						<h4>{{ .title }}</h4>
+					</div>
+				</div>
+			{{ end }}
 		</div>
 	</div>
 </section>
