all contents updated

--- a/themes/meghna-hugo/layouts/partials/blog.html
+++ b/themes/meghna-hugo/layouts/partials/blog.html
@@ -1,4 +1,7 @@
-{{ if gt (where site.RegularPages "Section" "==" "blog") 0}}
+{{/*   blog posts removed  */}}
+
+
+{{/*  {{ if gt (where site.RegularPages "Section" "==" "blog") 0}}
 {{"<!-- Start Blog Section -->" | safeHTML}}
 <section id="blog" class="section">
 	<div class="container">
@@ -24,4 +27,4 @@
 	</div>
 </section>
 {{"<!-- /blog -->" | safeHTML}}
-{{ end }}
+{{ end }}  */}}
