--- a/themes/meghna-hugo/layouts/partials/pricing.html
+++ b/themes/meghna-hugo/layouts/partials/pricing.html
@@ -1,4 +1,7 @@
-{{ $data := index site.Data site.Language.Lang }}
+{{/*  pricing section removed  */}}
+
+
+{{/*  {{ $data := index site.Data site.Language.Lang }}
 
 {{ if $data.pricing.pricing.enable }}
 {{ with $data.pricing.pricing }}
@@ -48,4 +51,4 @@
 </section>
 {{"<!-- /pricing -->" | safeHTML}}
 {{ end }}
-{{ end }}
+{{ end }}  */}}
