--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -1036,7 +1036,7 @@ a:hover {
   color: #fff ;
 }
 #skills h2{
-  color: #fff;
+  color: #ffa896;
 }
 
 .skill-card {
@@ -1065,7 +1065,7 @@ a:hover {
 .skill-card h4 {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #333;
+  color: #cd1c1a;
 }
 
 #skills .row {
