--- a/themes/meghna-hugo/layouts/index.html
+++ b/themes/meghna-hugo/layouts/index.html
@@ -20,6 +20,8 @@
 
 {{ partial "team.html" . }}
 
+{{ partial "clients_slider.html" . }}
+
 {{ partial "pricing.html" . }}
 
 {{ partial "testimonial.html" . }}
